// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Markdown Output > should match snapshot for custom template with additional custom data 1`] = `
# Custom Template: Extended Snapshot Test

## Project Overview

This project contains 3 file(s).

## File Listing

### package.json

- **Language:** json
- **Size:** 51 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`json
{
  "name": "test-project",
  "version": "1.0.0"
}

\`\`\`

---
### src/main.js

- **Language:** javascript
- **Size:** 30 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`javascript
console.log('Hello, World!');

\`\`\`

---
### src/utils.ts

- **Language:** typescript
- **Size:** 70 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`typescript
export function add(a: number, b: number): number {
  return a + b;
}

\`\`\`

---

## Custom Data

Custom data provided:
- title: Extended Snapshot Test
- version: 2.0.0
- author: Test Author
- description: This is a test project for snapshot testing

`;

exports[`Markdown Output > should match snapshot for custom template with custom data 1`] = `
# Custom Template: Snapshot Test Project

## Project Overview

This project contains 3 file(s).

## File Listing

### package.json

- **Language:** json
- **Size:** 51 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`json
{
  "name": "test-project",
  "version": "1.0.0"
}

\`\`\`

---
### src/main.js

- **Language:** javascript
- **Size:** 30 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`javascript
console.log('Hello, World!');

\`\`\`

---
### src/utils.ts

- **Language:** typescript
- **Size:** 70 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`typescript
export function add(a: number, b: number): number {
  return a + b;
}

\`\`\`

---

## Custom Data

Custom data provided:
- title: Snapshot Test Project
- version: 1.0.0

`;

exports[`Markdown Output > should match snapshot for custom template with empty custom data 1`] = `
# Custom Template: Untitled Project

## Project Overview

This project contains 3 file(s).

## File Listing

### package.json

- **Language:** json
- **Size:** 51 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`json
{
  "name": "test-project",
  "version": "1.0.0"
}

\`\`\`

---
### src/main.js

- **Language:** javascript
- **Size:** 30 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`javascript
console.log('Hello, World!');

\`\`\`

---
### src/utils.ts

- **Language:** typescript
- **Size:** 70 bytes
- **Last Modified:** 2024-07-10T21:40:47.688Z

#### Content Preview:

\`\`\`typescript
export function add(a: number, b: number): number {
  return a + b;
}

\`\`\`

---

## Custom Data

No custom data provided.

`;

exports[`Markdown Output > should match snapshot for default template 1`] = `
# Code Summary

- package.json
- src/main.js
- src/utils.ts

## Files

## package.json

- Language: json
- Size: 51 bytes
- Last modified: 2024-07-10T21:40:47.688Z

\`\`\`json
{
  "name": "test-project",
  "version": "1.0.0"
}

\`\`\`

## src/main.js

- Language: javascript
- Size: 30 bytes
- Last modified: 2024-07-10T21:40:47.688Z

\`\`\`javascript
console.log('Hello, World!');

\`\`\`

## src/utils.ts

- Language: typescript
- Size: 70 bytes
- Last modified: 2024-07-10T21:40:47.688Z

\`\`\`typescript
export function add(a: number, b: number): number {
  return a + b;
}

\`\`\`


`;

exports[`Markdown Output > should match snapshot for default template with no codeblocks 1`] = `
# Code Summary

- package.json
- src/main.js
- src/utils.ts

## Files

## package.json

- Language: json
- Size: 51 bytes
- Last modified: 2024-07-10T21:40:47.688Z

{
  "name": "test-project",
  "version": "1.0.0"
}


## src/main.js

- Language: javascript
- Size: 30 bytes
- Last modified: 2024-07-10T21:40:47.688Z

console.log('Hello, World!');


## src/utils.ts

- Language: typescript
- Size: 70 bytes
- Last modified: 2024-07-10T21:40:47.688Z

export function add(a: number, b: number): number {
  return a + b;
}



`;
